--- a/index.css
+++ b/index.css
@@ -170,6 +170,8 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding-bottom: 4rem;
+
 }
 
 .img_about img {
@@ -184,7 +186,7 @@ main {
   height: 450px;
   flex-direction: column;
   justify-content: center;
-  gap: 3rem;
+  gap: 2rem;
   padding: 1rem;
   background-color: #121111;
   border: 1px solid #fff;
